--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<md-toolbar color="primary">My App</md-toolbar>
+<button md-button color="primary">Click me!</button>
 <div style="text-align:center">
   <h1>
     Welcome to {{title}}!!
